apps/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    policy.home.arpa/allow-root: "true"
    policy.home.arpa/allow-any-capabilities: "true"
    policy.home.arpa/allow-hostpath: "true"
